name:               hamtmap
version:            0.3
cabal-version:      >= 1.2
synopsis:           A purely functional and persistent hash map
description:        A port of Clojure's efficient persistent and hash
                    map data structure to Haskell
license:            BSD3
license-File:       LICENSE
author:             Kevin Wu Won
maintainer:         Kevin Wu Won <exclipy@gmail.com>
homepage:           https://github.com/exclipy/pdata
category:           Data Structures
build-type:         Simple
extra-source-files:
    Data/BitUtil.hs
    benchmarks/benchmark.hs
    benchmarks/benchmarkmap.hs
    tests/tests.hs
    README.md
stability:          experimental

library
  build-depends:    base >= 4 && < 5, array, deepseq, hashable
  exposed-modules:  Data.HamtMap
  other-modules:    Data.BitUtil
  ghc-options:      -O2
