name:               hashmap
version:            0.2
cabal-version:      >= 1.2
synopsis:           A purely functional and persistent vector and hash map
description:        A port of Clojure's efficient persistent vector and hash
                    map data structures to Haskell
license:            BSD3
license-File:       LICENSE
author:             Kevin Wu Won
maintainer:         Kevin Wu Won <exclipy@gmail.com>
homepage:           https://github.com/exclipy/pdata
category:           Data Structures
build-type:         Simple
extra-source-files: Data/BitUtil.hs
stability:          experimental

library
  build-depends:    base >= 4.2, array, deepseq
  exposed-modules:  Data.HashMap
  other-modules:    Data.BitUtil
  ghc-options:      -O2
